compiler/typ/tests/fixtures/diagnostics/0024_core_cell_payload_mismatch_02.ml.infer.expected
File "0024_core_cell_payload_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0024_core_cell_payload_mismatch_02 is not a valid module name.

File "0024_core_cell_payload_mismatch_02.ml", line 2, characters 24-28:
2 | let _ : int cell = Cell true
                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
